[gd_scene load_steps=3 format=3 uid="uid://cep2vfoh14qxb"]

[ext_resource type="Script" uid="uid://c1maxoqmp13lh" path="res://core/StatsDisplay.gd" id="1_un85m"]
[ext_resource type="PackedScene" uid="uid://d0bfsckn0efs6" path="res://core/StatDisplay.tscn" id="2_54irn"]

[node name="StatsDisplay" type="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
offset_right = 28.0
offset_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_un85m")

[node name="StatsGrid" type="GridContainer" parent="."]
layout_mode = 2
columns = 2

[node name="StatDisplay" parent="StatsGrid" instance=ExtResource("2_54irn")]
layout_mode = 2
